--- a/app/stylesheets/sass/settings/_adm-layout.sass
+++ b/app/stylesheets/sass/settings/_adm-layout.sass
@@ -3,7 +3,7 @@ html
 
 .adm-body
   background-color: #31383f
-  &.__auth
+  &.__landing
     @include user-select(none)
     height: 100%
     overflow: hidden
