--- a/app/stylesheets/sass/modules/_adm-auth.sass
+++ b/app/stylesheets/sass/modules/_adm-auth.sass
@@ -1,7 +1,16 @@
 .adm-auth
-  margin: 20px auto
+  width: 100%
+  height: 100%
   text-align: center
   color: #fff
+  .adm-btn-auth-back
+    z-index: 2
+  .container
+    padding:
+      top: 20px
+      bottom: 20px
+  .adm-btn-auth-start
+    display: none
   .form-group
     margin-bottom: 18px
     &.has-error .control-label
@@ -25,29 +34,42 @@
     height: 132px
     resize: none
 
-.adm-auth-steps
+.adm-auth-buttons
   position: absolute
-  width: 140px
-  margin-left: -70px
+  top: 55px
+  right: 55px
+  display: none
+  z-index: 10
+  button
+    margin-left: 10px
+
+.adm-auth-step
+  width: 224px
+  width: 304px
+  position: absolute
+  margin-left: -117px
+  margin-left: -152px
   top: 40px
   left: 50%
   text-align: center
 
-.adm-auth-back
-  padding: 10px
-  position: absolute
-  left: 10px
-  bottom: 5px
-  color: #fff
-  cursor: pointer
+.adm-auth-step-head
+  margin-bottom: 6px
+  font-size: 18px
+  opacity: .96
+
+.adm-auth-step-desc
+  opacity: .5
 
 // Когда будет компонент на реакте
 // правило .adm-auth-section
 // можно удалить
 .adm-auth-section
+  width: 100%
+  height: 100%
   display: none
   .adm-auth.__welcome &.__welcome,
-  .adm-auth.__poll &.__poll,
+  .adm-auth.__start-poll &.__start-poll,
   .adm-auth.__auth-first &.__auth-first,
   .adm-auth.__auth-second &.__auth-second,
   .adm-auth.__q1 &.__q1,
@@ -59,24 +81,20 @@
     display: block
 
 .adm-auth.__welcome
-  .adm-auth-back
+  .adm-auth-buttons,
+  .adm-btn-auth-start
+    display: block
+  .adm-btn-auth-back
     display: none
 
 .adm-auth-title
   @extend %font-light
   margin: 0 0 38px
-  font-size: 78px
+  font-size: 66px
   line-height: 1
   color: inherit
 
-.adm-auth-subtitle
-  @extend %font-light
-  margin: 0 0 38px
-  font-size: 50px
-  line-height: 1
-  color: inherit
-
-.adm-auth-actions
+.adm-auth-form-actions
   margin-top: 34px
 
 @media (max-width: $screen-md-max)
@@ -84,11 +102,20 @@
     font-size: 60px
 
 @media (max-width: $screen-sm-max)
-  .adm-auth-title,
-  .adm-auth-subtitle
+  .adm-auth-title
     font-size: 40px
 
 @media (max-width: $screen-xs-max)
-  .adm-auth-title,
-  .adm-auth-subtitle
+  .adm-auth-title
     font-size: 30px
+
+@media (max-height: 600px)
+  .adm-auth-step
+    position: relative
+    margin: 0 auto 26px
+    top: auto
+    left: auto
+
+  .adm-auth-buttons
+    top: 20px
+    right: 20px
