Статическая страница категорий

--- a/app/index.haml
+++ b/app/index.haml
@@ -6,7 +6,7 @@
     .container
       %a.login__navbar-logo{href: 'index.html'}
       %hr
-      - pages_new = [{url: 'adm-auth.html', title: 'Авторизация'}, {url: 'adm-dashboard.html', title: 'Дешборд'}, {url: 'adm-orders-list.html', title: 'Все заказы'}, {url: 'adm-order.html', title: 'Страница заказа'}, {url: 'adm-edit-product.html', title: 'Редактирование товара'}, {url: 'adm-categories.html', title: 'Категории товаров'}]
+      - pages_new = [{url: 'adm-auth.html', title: 'Авторизация'}, {url: 'adm-dashboard.html', title: 'Дешборд'}, {url: 'adm-orders-list.html', title: 'Все заказы'}, {url: 'adm-order.html', title: 'Страница заказа'}, {url: 'adm-edit-product.html', title: 'Редактирование товара'}, {url: 'adm-categories.html', title: 'Категории товаров'}, {url: 'adm-categories-static.html', title: 'Категории товаров (без реакта)'}]
       - pages_old = [{url: 'signup.html', title: 'Регистрация'}, {url: 'signup_errors.html', title: 'Регистрация (ошибки)'}, {url: 'signup_pin.html', title: 'Регистраци (подтверждение пин-кода)'}, {url: 'login.html', title: 'Авторизация'}, {url: 'login_errors.html', title: 'Авторизация (ошибки)'}, {url: 'reset_password.html', title: 'Восстановить пин-код'}, {url: 'orders.html', title: 'Заказы'}, {url: 'products.html', title: 'Страница товаров'}, {url: 'products_new.html', title: 'Добавление нового товара'}, {url: 'categories.html', title: 'Категории товаров'}]
       %h1 Новое
       %ol
