--- a/app/adm-edit-product.haml
+++ b/app/adm-edit-product.haml
@@ -117,7 +117,7 @@
                   .form-group.text
                     %label
                       Описание
-                    %textarea.form-control{:placeholder => "Описание", :required => "required", :role => "autosize"}
+                    %textarea.form-control{:placeholder => "Описание", :required => "required", "autosize" => true}
 
                   .form-group
                     %label Характеристики
