limit for products thumb in adm

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -13,6 +13,10 @@ $zindex-adm-categories-item-active: 10
 
     position: relative
 
+.adm-categories-goods-thumb
+  max-height: 50px
+  max-width: 50px
+
 .adm-categories
   margin: -20px -30px -20px
   position: relative
