--- a/app/_products.haml
+++ b/app/_products.haml
@@ -6,38 +6,38 @@
       %td.adm-categories-goods-status Статус
   %tbody
     %tr
-      %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         /%a{:href => "#product", :title => "Мыльница с якорем"}
         %img{:src => "assets/product-50x50-1.jpg", :alt => "Мыльница с якорем"}
-      %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         /%a{:href => "#product", :title => "Мыльница с якорем"}
         Мыльница с якорем
-      %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         %span.nobr 18 000 руб
-      %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         %span.label.label-success
           Опубликован
     %tr
-      %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         /%a{:href => "#product", :title => "Табуретка"}
         %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
-      %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         /%a{:href => "#product", :title => "Табуретка"}
         Табуретка
-      %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         %span.nobr 3 999 руб
-      %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         %span.label.label-success
           Опубликован
     %tr
-      %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         /%a{:href => "#product", :title => "Табуретка"}
         %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
-      %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         /%a{:href => "#product", :title => "Табуретка"}
         Табуретка
-      %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         %span.nobr 5 999 руб
-      %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
+      %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "ks-modal": true}
         %span.label.label-warning
           Закончился
