--- a/app/stylesheets/sass/modules/_adm-orders.sass
+++ b/app/stylesheets/sass/modules/_adm-orders.sass
@@ -33,6 +33,8 @@
 
 .adm-orders-table-cell.__number,
 .adm-orders-table-cell.__location,
+.adm-orders-table-cell.__thumb
+  max-height: 60px
 .adm-orders-table-cell.__time
   color: $gray-lighter
 
