--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -180,7 +180,7 @@
                           %td.adm-categories-goods-price Цена
                           %td.adm-categories-goods-status Статус
                       %tbody
-                        %tr
+                        %tr{data: {modal-url: "modal-edit-product.html"}, "ks-modal": true}
                           %td.adm-categories-goods-cover{data: {title: "Товар"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Мыльница с якорем"}
                             %img{:src => "assets/product-50x50-1.jpg", :alt => "Мыльница с якорем"}
@@ -192,7 +192,7 @@
                           %td.adm-categories-goods-status{data: {title: "Статус"}, role: "modal-edit-product-toggle"}
                             %span.label.label-success
                               Опубликован
-                        %tr
+                        %tr{data: {modal-url: "modal-edit-product.html"}, "ks-modal": true}
                           %td.adm-categories-goods-cover{data: {title: "Товар"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Табуретка"}
                             %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
@@ -204,7 +204,7 @@
                           %td.adm-categories-goods-status{data: {title: "Статус"}, role: "modal-edit-product-toggle"}
                             %span.label.label-success
                               Опубликован
-                        %tr
+                        %tr{data: {modal-url: "modal-edit-product.html"}, "ks-modal": true}
                           %td.adm-categories-goods-cover{data: {title: "Товар"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Табуретка"}
                             %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
