--- a/app/stylesheets/sass/settings/_labels.sass
+++ b/app/stylesheets/sass/settings/_labels.sass
@@ -39,3 +39,16 @@ a.label
 
 .label-delivery-cancelled
   @include label-variant($label-warning-bg)
+
+// Product
+.label-product-published
+  @include label-variant($label-success-bg)
+
+.label-product-preparation
+  @include label-variant($label-primary-bg)
+
+.label-product-error
+  @include label-variant($label-warning-bg)
+
+.label-product-archive
+  @include label-variant($label-waiting-bg)
