--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -22,6 +22,7 @@ $brand-color-dark: darken($yellow, 10%)
 $line-color: $gray-lightest
 
 $brand-default: #d8d8d8
+$brand-primary: $blue-dark
 $brand-success: $green
 $brand-warning: $orange
 $brand-waiting: $yellow
@@ -144,6 +145,7 @@ $modal-lg: 804px
 
 // Label
 $label-default-bg: $brand-default
+$label-primary-bg: $brand-primary
 $label-success-bg: $brand-success
 $label-warning-bg: $brand-warning
 $label-waiting-bg: $brand-waiting
@@ -168,6 +170,3 @@ $adm-dropdown-popup-link-disabled-color: $gray-light !default
 $adm-dropdown-popup-arrow-size: 7px
 
 $adm-dropdown-popup-arrow-color: $adm-dropdown-popup-bg !default
-
-// Типографика
-// h1 - 28px
