--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -13,7 +13,7 @@
     .adm-layout
       +include './app/shared/_layout_sidebar.haml'
 
-      - order_states = {new: {slug: 'new', title: 'Новый'}, delivery: {slug: 'delivery', title: 'Доставка'}, cancelled: {slug: 'cancelled', title: 'Отменён'}, paused: {slug: 'paused', title: 'Пауза'}}
+      - filter_product_states = {new: {slug: 'published', title: 'Опубликованные'}, delivery: {slug: 'preparation', title: 'В подготовке'}, cancelled: {slug: 'error', title: 'С ошибками'}, paused: {slug: 'archive', title: 'Архив'}}
 
       / Layout Main
       .adm-layout-main
@@ -44,6 +44,14 @@
                 .adm-categories-header-col.__right
                   %form.adm-categories-search-form{action: '?'}
                     %input.adm-categories-search-field.form-control{type: 'text', placeholder: 'Поиск по товарам'}
+                  .adm-dropdown
+                    %a.label.label-product-published{href: '#todo', data: {toggle: 'dropdown'}} Опубликованные
+                    %ul.adm-dropdown-menu-status
+                      - for filter_product_state of filter_product_states
+                        - filter_product_state = filter_product_states[filter_product_state]
+                        %li.adm-dropdown-menu-status-item
+                          %a.adm-dropdown-menu-status-btn{class: "__#{filter_product_state.slug}"}
+                            = "#{filter_product_state.title}"
             .adm-categories-body
               .adm-categories-grid
                 .adm-categories-grid-col{role: 'categories-list'}
