--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -137,6 +137,15 @@ $zindex-adm-categories-item-active: 10
     border-width: 3px
     border-color: $adm-categories-item-active-bg
     border-style: dashed
+  &.__droptarget-active
+    padding: $adm-categories-item-vertical-padding - 3px $adm-categories-item-horizontal-padding - 4px $adm-categories-item-vertical-padding - 2px $adm-categories-item-horizontal-padding - 3px
+    padding: -4px
+    margin: 1px
+    border-width: 2px
+    border-color: lighten($adm-categories-item-active-bg, 30%)
+    border-style: dotted
+  &.__droptarget-hover
+    background-color: lighten($adm-categories-item-active-bg, 30%)
   .adm-btn-edit-category
     margin-top: -16px
     position: absolute
@@ -203,6 +212,8 @@ $zindex-adm-categories-item-active: 10
       font-size: $font-size-base
       color: #d0d0d0
   tbody
+    tr
+      background: #fff
     td
       padding: 5px 20px 5px 0
       border-bottom: 1px solid #e9e9e9
@@ -222,6 +233,11 @@ $zindex-adm-categories-item-active: 10
 
 .adm-categories-goods-status
   width: 140px
+
+// Дрэг-хэлпер (app/scripts/react/components/operator-products/list_row_drag_helper.js.jsx.coffee)
+.adm-categories-goods-draghelper
+  background: #ffc
+  padding: 10px
 
 
 @media screen and (max-width: $screen-sm-max)
