--- a/app/adm-auth.haml
+++ b/app/adm-auth.haml
@@ -5,8 +5,6 @@
   %head
     +include './app/shared/_head.haml'
   %body.adm-body.__landing
-    %script{src: 'scripts/bundle.js'}
-
     / Layout
     .adm-layout
       / Auth
@@ -217,3 +215,5 @@
                           Войти
           / end Auth
     / end Layout
+    %script{src: 'scripts/vendor.js'}
+    %script{src: 'scripts/client.js'}
