--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -5,8 +5,6 @@
   %head
     +include './app/shared/_head.haml'
   %body.adm-body
-    %script{src: 'scripts/bundle.js'}
-
     +include './app/shared/_topbar.haml'
 
     / Layout
@@ -230,3 +228,5 @@
           / end Categories
       / end Layout Main
     / end Layout
+    %script{src: 'scripts/vendor.js'}
+    %script{src: 'scripts/client.js'}
