--- a/app/adm-dashboard.haml
+++ b/app/adm-dashboard.haml
@@ -5,8 +5,6 @@
   %head
     +include './app/shared/_head.haml'
   %body.adm-body
-    %script{src: 'scripts/bundle.js'}
-
     +include './app/shared/_topbar.haml'
 
     / Layout
@@ -78,3 +76,5 @@
                     != 'Артикул: ' + popup_product.article + '<br />'
                     = 'Количество: ' + popup_product.quantity
     / end Popup Products
+    %script{src: 'scripts/vendor.js'}
+    %script{src: 'scripts/client.js'}
