--- a/app/adm-edit-product.haml
+++ b/app/adm-edit-product.haml
@@ -5,8 +5,6 @@
   %head
     +include './app/shared/_head.haml'
   %body.adm-body
-    %script{src: 'scripts/bundle.js'}
-
     +include './app/shared/_topbar.haml'
 
     / Layout
@@ -146,3 +144,5 @@
                   Удалить товар навсегда
       / end Layout Main
     / end Layout
+    %script{src: 'scripts/vendor.js'}
+    %script{src: 'scripts/client.js'}
