--- a/app/adm-order.haml
+++ b/app/adm-order.haml
@@ -5,8 +5,6 @@
   %head
     +include './app/shared/_head.haml'
   %body.adm-body
-    %script{src: 'scripts/bundle.js'}
-
     +include './app/shared/_topbar.haml'
 
     / Layout
@@ -160,3 +158,5 @@
           / end Order
       / end Layout Main
     / end Layout
+    %script{src: 'scripts/vendor.js'}
+    %script{src: 'scripts/client.js'}
