--- a/app/stylesheets/dist.scss
+++ b/app/stylesheets/dist.scss
@@ -1,4 +1,6 @@
 @charset "UTF-8";
 
 // Тут прописываем всякие font-path и image-path
-$images-path: "../assets";
+$images-path: "/assets";
+$fa-font-path: "/assets";
+$fonts-path: "/assets";
