--- a/app/shared/_head.haml
+++ b/app/shared/_head.haml
@@ -3,7 +3,7 @@
 %meta{:content => "", :name => "description"}
 %meta{:content => "width=device-width, initial-scale=1, user-scalable=no", :name => "viewport"}
 
-%link{:href => "stylesheets/app.css", :rel => "stylesheet"}
+%link{:href => "stylesheets/local.css", :rel => "stylesheet"}
 
 %link{:href => "assets/favicon/favicon.ico", :rel => "shortcut icon"}
 %link{:href => "assets/touch-icon-57.png", :rel => "apple-touch-icon", :sizes => "57x57"}
