--- a/app/modal-order.haml
+++ b/app/modal-order.haml
@@ -35,19 +35,18 @@
               .row
                 .col-sm-5
                   .form-group
-                    %label
-                      Имя
+                    %label.control-label Имя
                     %p
                       Евгений
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Емейл
                     %p
                       genue.luben@gmail.com
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Телефон
                     %p
                       = '+7 (905) 716-14-51'
@@ -63,26 +62,26 @@
               .row
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Город
                     %p
                       Санкт-Петербург
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Адрес
                     %p
                       ул. Академика Янгеля, дом 5, корпус 25, квартира 12, домофон 356
               .row
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Доставка
                     %p
                       Курьером
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Комментарий к заказу
                     %p
                       Доставка послезавтра!
@@ -94,7 +93,7 @@
               .row
                 .col-sm-5
                   .form-group
-                    %label
+                    %label.control-label
                       Способ оплаты
                     %p
                       Банковские карты
@@ -131,7 +130,7 @@
       / end Order Body
       / Order Footer
       %footer.adm-order-footer
-        %button.adm-btn-remove-order.pull-right
-          Удалить товар навсегда
+        %button.adm-btn-remove.pull-right
+          Удалить заказ
       / end Order Footer
   / end Order
