--- a/app/stylesheets/sass/modules/_adm-dropdown.sass
+++ b/app/stylesheets/sass/modules/_adm-dropdown.sass
@@ -6,7 +6,7 @@
   border-radius: 0
   +antialiased
   &, &:hover, &:focus
-    color: #fff
+    color: #fff !important
 
 .inline-dropdown
   @include inline-valign-middle
@@ -23,7 +23,7 @@
 
 .adm-dropdown-menu-status-btn
   @extend %adm-dropdown-menu-status-btn
-  padding: $grid-gutter-width/2
+  padding: $grid-gutter-width/2 !important
 
 .adm-dropdown-menu-status
   @extend .dropdown-menu
