--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -62,9 +62,10 @@ $navbar-background-color: #fff
 $block-padding: 20px
 
 // Z-index List
+$zindex-adm-categories-item-active: 10
+$zindex-adm-topbar: 400 !default
 $zindex-popup: 1000 // для popup-roducts (TODO: избавиться, т.к. не используется)
 $zindex-adm-dropdown-popup: 1000 !default
-$zindex-adm-topbar: 400 !default
 
 // Navbar
 $navbar-height:                    72px
@@ -170,3 +171,11 @@ $adm-dropdown-popup-link-disabled-color: $gray-light !default
 $adm-dropdown-popup-arrow-size: 7px
 
 $adm-dropdown-popup-arrow-color: $adm-dropdown-popup-bg !default
+
+// Categories
+$adm-categories-item-vertical-padding: 14px
+$adm-categories-item-horizontal-padding: 15px
+
+$adm-categories-item-font-size: $font-size-base
+
+$adm-categories-item-active-bg: $blue
