--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -44,6 +44,7 @@
                     %input.adm-categories-search-field.form-control{type: 'text', placeholder: 'Поиск по товарам'}
                   .adm-dropdown
                     %a.label.label-product-published{href: '#todo', data: {toggle: 'dropdown'}} Опубликованные
+                      %i.fa.fa-angle-down
                     %ul.adm-dropdown-menu-status
                       - for filter_product_state of filter_product_states
                         - filter_product_state = filter_product_states[filter_product_state]
