--- a/app/adm-order.haml
+++ b/app/adm-order.haml
@@ -56,19 +56,19 @@
                       .row
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Имя
                             %p
                               Евгений
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Емейл
                             %p
                               genue.luben@gmail.com
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Телефон
                             %p
                               = '+7 (905) 716-14-51'
@@ -84,26 +84,26 @@
                       .row
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Город
                             %p
                               Санкт-Петербург
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Адрес
                             %p
                               ул. Академика Янгеля, дом 5, корпус 25, квартира 12, домофон 356
                       .row
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Доставка
                             %p
                               Курьером
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Комментарий к заказу
                             %p
                               Доставка послезавтра!
@@ -115,7 +115,7 @@
                       .row
                         .col-sm-5
                           .form-group
-                            %label
+                            %label.control-label
                               Способ оплаты
                             %p
                               Банковские карты
@@ -152,8 +152,8 @@
               / end Order Body
               / Order Footer
               %footer.adm-order-footer
-                %button.adm-btn-remove-order.pull-right
-                  Удалить товар навсегда
+                %button.adm-btn-remove.pull-right
+                  Удалить заказ
               / end Order Footer
           / end Order
       / end Layout Main
