--- a/app/stylesheets/sass/modules/_adm-orders.sass
+++ b/app/stylesheets/sass/modules/_adm-orders.sass
@@ -1,8 +1,5 @@
-.adm-orders
-
 .adm-orders-table
-  @extend .table
-  @extend .table-striped
+  @include flexible-table
   font-size: $font-size-base
   line-height: $line-height-base
   .order-status-bullet
