[#82190106] Фикс характеристик в модалке

--- a/app/modal-edit-product.haml
+++ b/app/modal-edit-product.haml
@@ -107,7 +107,7 @@
             .row
               .col-sm-6
                 .form-group-sm
-                  %div.form-control Например, веc
+                  %div.form-control-fake Например, веc
               .col-sm-6
                 .row-gutter-dash.text-muted
                   &mdash;
@@ -116,7 +116,7 @@
             .row
               .col-sm-6
                 .form-group-sm
-                  %input.form-control{type: 'text', placeholder: 'Например, вес'}
+                  %div.form-control-fake Например, вес
               .col-sm-6
                 .row-gutter-dash.text-muted
                   &mdash;
