Поправил настройки local/dist

--- a/app/adm-auth.haml
+++ b/app/adm-auth.haml
@@ -216,4 +216,4 @@
           / end Auth
     / end Layout
     %script{src: 'scripts/vendor.js'}
-    %script{src: 'scripts/client.js'}
+    %script{src: 'scripts/local.js'}
