--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -229,4 +229,4 @@
       / end Layout Main
     / end Layout
     %script{src: 'scripts/vendor.js'}
-    %script{src: 'scripts/client.js'}
+    %script{src: 'scripts/local.js'}
