--- a/app/adm-orders-list.haml
+++ b/app/adm-orders-list.haml
@@ -96,4 +96,4 @@
                     = 'Количество: ' + popup_product.quantity
     / end Popup Products
     %script{src: 'scripts/vendor.js'}
-    %script{src: 'scripts/client.js'}
+    %script{src: 'scripts/local.js'}
