--- a/app/adm-categories.haml
+++ b/app/adm-categories.haml
@@ -48,4 +48,4 @@
       / end Layout Main
     / end Layout
     %script{src: 'scripts/vendor.js'}
-    %script{src: 'scripts/client.js'}
+    %script{src: 'scripts/local.js'}
