--- a/app/adm-edit-product-react.haml
+++ b/app/adm-edit-product-react.haml
@@ -99,12 +99,10 @@
 
                       .form-group
                         -#input.btn.form-control{type: "text", placeholder: 'Добавить размеры и цвета'}
-                        .btn-add-fields{role: 'products__new-form-variants-add'}
-                          Добавить ещё
+                        .btn-add-fields{role: 'products__new-form-variants-add'} Добавить ещё
 
                   .form-group.text
-                    %label.control-label
-                      Описание
+                    %label.control-label Описание
                     %textarea.form-control{:placeholder => "Описание", :required => "required", "autosize" => true}
 
                   .form-group
