--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -95,6 +95,7 @@ $input-background-inactive: rgba(#fff, 0.85)
 
 $left-sidebar-z-index: 300
 $header-navbar-z-index: 400
+$products__new-form-image-input-z-index: 3
 
 // Order Status Bullet
 $order-status-bullet-size: 10px
