--- a/app/stylesheets/sass/modules/_products.sass
+++ b/app/stylesheets/sass/modules/_products.sass
@@ -125,6 +125,7 @@ $products-form-images-list-padding: 12px
   top: 0
   opacity: 0
   cursor: pointer
+  z-index: $products__new-form-image-input-z-index
 
 .products__new-form-images-list
   @include clearfix
